# note_sage

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: actions.rs  cli.rs  main.rs  models.rs  tui.rs
