[package]
name = "rust-todo"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ratatui = "0.23"
crossterm = "0.27"
chrono = { version = "0.4", features = ["serde"] }
mlua = { version = "0.9", features = ["lua54", "vendored"] }
directories = "5.0"  # For resolving config file paths
thiserror = "1.0"  # For custom error types
